--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -15,7 +15,7 @@ set -g @tpm_plugins "             \
   tmux-plugins/tmux-pain-control  \
   tmux-plugins/tmux-prefix-highlight \
   Morantron/tmux-fingers  \
-  arcticicestudio/nord-tmux \
+  jimeh/tmux-themepack \
 "
 
 set -ag @batt_charged_icon '#[fg=green]full#[default]'
@@ -31,5 +31,6 @@ set -ag @resurrect-capture-pane-contents 'on'
 set -ag @resurrect-processes '"~ssh" "~vagrant" "~docker-compose" "~docker"'
 set -ag @resurrect-processes '"~mk" "~make" "~mosh" "~weechat"'
 set -ag @resurrect-processes '"nvim->nvim +SLoad"'
+set -g @themepack 'powerline/default/orange'
 
 run-shell $HOME/.tmux/plugins/tpm/tpm
