Drop maaaaaaaaaaaaad stuff.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -22,13 +22,44 @@ set -sgw escape-time 1
 set -sgw history-limit 16384
 # }}}
 
+# Make counting of panes start from 1; and recount them.
+set -gw base-index 1
+set -gw pane-base-index 1
+set -gw renumber-window on
+
+# Allow preservation of screen output.
+set -gw alternate-screen on
+
+# Rename screens on-the-fly.
+set -gw automatic-rename on
+
+#  Give us the 256 of screen.
+set -sgw default-terminal "screen-256color"
+
+# Defines the string that'd be used for the parent terminal.
+set -gw set-titles-string "tmux(#P/#I) #S - #W (#T)"
+
+# Enable the editing of titles.
+set -sgw set-titles on
+
+# Enable clipboard support a la xterm.
+set -sgw set-clipboard on
+
+# Update the following variables from the environment.
+set -ag update-environment DISPLAY
+set -ag update-environment WINDOWID
+set -ag update-environment XAUTHORITY
+set -ag update-environment DBUS_SESSION_BUS_ADDRESS
+
+# Handle SSH variables.
+set -ag update-environment SSH_CONNECTION
+set -ag update-environment SSH_ASKPASS
+set -ag update-environment SSH_AUTH_SOCK
+set -ag update-environment SSH_AGENT_PID
+
+set -sga terminal-overrides ",xterm-256color:Tc"
+
 # {{{1 Configuration
-set -gw mouse-utf8 on
-source-file $HOME/.tmux/xterm.conf
-source-file $HOME/.tmux/status.conf
-source-file $HOME/.tmux/window.conf
-source-file $HOME/.tmux/panes.conf
-source-file $HOME/.tmux/messages.conf
 source-file $HOME/.tmux/bindings.conf
 source-file $HOME/.tmux/tpm.conf
 source-file $HOME/.tmux.local.conf
