--- a/home/.tmux/bindings.conf
+++ b/home/.tmux/bindings.conf
@@ -17,10 +17,6 @@ bind-key b send-key C-a
 bind r source-file ~/.tmux.conf \;\
   display-message '[😜  tmux] Configuration reloaded.'
 
-# Again, when you immediately hit <Alt-Tab>, it typically cycles to the last
-# window you viewed (at least it does for me with KWin).
-bind-key C-l last-window
-
 # Oppa Vim-navigation Style! Seriously, this enables Vim-like pane navigation
 # (keep the prefix held for even more fun).
 bind-key h select-pane -L
@@ -29,7 +25,7 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 # Even more awesome, break a pane into its own window.
-bind-key g break-pane -F '[🎓  tmux] Graduated into window #{window_index}.'
+gind-key g break-pane -F '[🎓  tmux] Graduated into window #{window_index}.'
 
 # Switch the layout from its current state to one of the pre-defined ones. Not
 # something I use often, but it comes in handy so it's a bit out-of-reach.
@@ -47,9 +43,3 @@ bind-key V set-window-option monitor-activity
 
 # Toggle sending to all panes.
 bind-key a set-window-option synchronize-panes
-
-# {{{ Mouse Bindings
-# Toggle mouse on with <prefix>{M,m}
-bind M run 'tmux-mouse --enable'
-bind m run 'tmux-mouse --disable'
-# }}}
