--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -7,22 +7,20 @@ set -g @tpm_plugins "             \
   tmux-plugins/tmux-yank          \
   tmux-plugins/tmux-urlview       \
   tmux-plugins/tmux-resurrect     \
-  tmux-plugins/tmux-continuum     \
   tmux-plugins/tmux-sensible      \
   tmux-plugins/tmux-pain-control  \
   tmux-plugins/tmux-prefix-highlight \
-  Morantron/tmux-fingers  \
   jimeh/tmux-themepack \
 "
 
-set -ag @continuum-restore 'on'
-set -ag @prefix_highlight_show_copy_mode 'on'
-set -ag @resurrect-save-bash-history 'on'
-set -ag @resurrect-strategy-nvim 'session'
-set -ag @resurrect-capture-pane-contents 'on'
-set -ag @resurrect-processes '"~ssh" "~vagrant" "~docker-compose" "~docker"'
-set -ag @resurrect-processes '"~mk" "~make" "~mosh" "~weechat"'
-set -ag @resurrect-processes '"nvim->nvim +SLoad"'
-set -g @themepack 'powerline/default/orange'
+set -g @shell-mode 'vim'
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @resurrect-save-bash-history 'on'
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @themepack 'powerline/double/cyan'
+set -ag @resurrect-processes ' "~ssh" "~vagrant" "~docker-compose" "~docker"'
+set -ag @resurrect-processes ' "~mk" "~make" "~mosh" "~weechat"'
+set -ag @resurrect-processes ' "nvim->nvim +SLoad"'
 
 run-shell $HOME/.tmux/plugins/tpm/tpm
