--- a/home/.tmux/bindings.conf
+++ b/home/.tmux/bindings.conf
@@ -25,7 +25,7 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 # Even more awesome, break a pane into its own window.
-gind-key g break-pane -F '[🎓  tmux] Graduated into window #{window_index}.'
+bind-key g break-pane -F '[🎓  tmux] Graduated into window #{window_index}.'
 
 # Switch the layout from its current state to one of the pre-defined ones. Not
 # something I use often, but it comes in handy so it's a bit out-of-reach.
