--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -9,8 +9,7 @@
 # }}}
 
 # {{{1 General options
-# Keep its noise to nearly nothing.
-set -sgw quiet on
+set -swg mouse off
 
 # Be quantum, change depending on who's looking.
 set -sgw aggressive-resize on
@@ -45,21 +44,9 @@ set -sgw set-titles on
 # Enable clipboard support a la xterm.
 set -sgw set-clipboard on
 
-# Update the following variables from the environment.
-set -ag update-environment DISPLAY
-set -ag update-environment WINDOWID
-set -ag update-environment XAUTHORITY
-set -ag update-environment DBUS_SESSION_BUS_ADDRESS
+# Keep a history file.
+set -swg history-file $HOME/.tmux/history.log
 
-# Handle SSH variables.
-set -ag update-environment SSH_CONNECTION
-set -ag update-environment SSH_ASKPASS
-set -ag update-environment SSH_AUTH_SOCK
-set -ag update-environment SSH_AGENT_PID
-
-set -sga terminal-overrides ",xterm-256color:Tc"
-
-# {{{1 Configuration
 source-file $HOME/.tmux/bindings.conf
 source-file $HOME/.tmux/tpm.conf
 source-file $HOME/.tmux.local.conf
