--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -1,6 +1,6 @@
 # vim: set ft=tmux :
 # List of plugins
-set -g @tpm_plugins "             \
+set -og @tpm_plugins "             \
   tmux-plugins/tmux-logging       \
   tmux-plugins/tmux-copycat       \
   tmux-plugins/tmux-open          \
@@ -18,7 +18,7 @@ set -g @prefix_highlight_show_copy_mode 'on'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
-set -g @themepack 'powerline/double/cyan'
+set -g @themepack 'powerline/double/red'
 set -ag @resurrect-processes ' "~ssh" "~vagrant" "~docker-compose" "~docker"'
 set -ag @resurrect-processes ' "~mk" "~make" "~mosh" "~weechat"'
 set -ag @resurrect-processes ' "nvim->nvim +SLoad"'
