--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -18,7 +18,7 @@ set -g @prefix_highlight_show_copy_mode 'on'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
-set -g @themepack 'powerline/double/red'
+set -g @themepack 'powerline/double/blue'
 set -ag @resurrect-processes ' "~ssh" "~vagrant" "~docker-compose" "~docker"'
 set -ag @resurrect-processes ' "~mk" "~make" "~mosh" "~weechat"'
 set -ag @resurrect-processes ' "nvim->nvim +SLoad"'
