--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -29,8 +29,11 @@ set -gw renumber-window on
 # Allow preservation of screen output.
 set -gw alternate-screen on
 
-# Rename screens on-the-fly.
-set -gw automatic-rename on
+# Don't constantly rename screens.
+set -gw automatic-rename off
+
+# Switch to next session.
+set -gw detach-on-destroy off
 
 #  Give us the 256 of screen.
 set -sgw default-terminal "screen-256color"
@@ -43,6 +46,9 @@ set -sgw set-titles on
 
 # Enable clipboard support a la xterm.
 set -sgw set-clipboard on
+
+# Use vim mode.
+set -g mode-keys vi
 
 # Keep a history file.
 set -swg history-file $HOME/.tmux/history.log
