--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -1,15 +1,17 @@
 # vim: set ft=tmux :
 # List of plugins
-set -og @tpm_plugins "             \
+set -g @tpm_plugins "             \
   tmux-plugins/tmux-logging       \
   tmux-plugins/tmux-copycat       \
   tmux-plugins/tmux-open          \
-  tmux-plugins/tmux-yank          \
   tmux-plugins/tmux-urlview       \
   tmux-plugins/tmux-resurrect     \
+  tmux-plugins/tmux-sessionist    \
   tmux-plugins/tmux-sensible      \
   tmux-plugins/tmux-pain-control  \
+  tmux-plugins/tmux-yank          \
   tmux-plugins/tmux-prefix-highlight \
+  DanielFGray/tmux-fzf-urls \
   jimeh/tmux-themepack \
 "
 
@@ -18,9 +20,10 @@ set -g @prefix_highlight_show_copy_mode 'on'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
-set -g @themepack 'powerline/double/blue'
+set -g @themepack 'block/blue'
 set -ag @resurrect-processes ' "~ssh" "~vagrant" "~docker-compose" "~docker"'
 set -ag @resurrect-processes ' "~mk" "~make" "~mosh" "~weechat"'
-set -ag @resurrect-processes ' "nvim->nvim +SLoad"'
+set -ag @resurrect-processes ' "~glances" "~tail" "~most" "~npx" "~npm" "~bundle"'
+set -ag @resurrect-processes ' "nvim->nvim +SLoad default"'
 
 run-shell $HOME/.tmux/plugins/tpm/tpm
