fix(display): Move status to top.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -50,6 +50,9 @@ set -sgw set-clipboard on
 # Use vim mode.
 set -g mode-keys vi
 
+# Put the status on top.
+set -g status-position top
+
 # Keep a history file.
 set -swg history-file $HOME/.tmux/history.log
 
