Update conf, bindings, plugins.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -9,49 +9,50 @@
 # }}}
 
 # {{{1 General options
-set -swg mouse off
+set -g mouse off
 
 # Be quantum, change depending on who's looking.
-set -sgw aggressive-resize on
+set -g aggressive-resize on
 
 # Drop response time.
-set -sgw escape-time 1
+set -g escape-time 1
 
 # Update history size.
-set -sgw history-limit 16384
+set -g history-limit 16384
 # }}}
 
 # Make counting of panes start from 1; and recount them.
-set -gw base-index 1
-set -gw pane-base-index 1
-set -gw renumber-window on
+set -g base-index 1
+set -g pane-base-index 1
+set -g renumber-windows on
 
 # Allow preservation of screen output.
-set -gw alternate-screen on
+set -g alternate-screen on
 
 # Don't constantly rename screens.
-set -gw automatic-rename off
+set -g automatic-rename off
 
 # Switch to next session.
-set -gw detach-on-destroy off
+set -g detach-on-destroy off
 
 #  Give us the 256 of screen.
-set -sgw default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 
 # Defines the string that'd be used for the parent terminal.
-set -gw set-titles-string "tmux(#P/#I) #S - #W (#T)"
+set -g set-titles-string "tmux(#P/#I) #S - #W (#T)"
 
 # Enable the editing of titles.
-set -sgw set-titles on
+set -g set-titles on
 
 # Enable clipboard support a la xterm.
-set -sgw set-clipboard on
+set -g set-clipboard on
 
 # Use vim mode.
 set -g mode-keys vi
 
 # Keep a history file.
-set -swg history-file $HOME/.tmux/history.log
+set -g history-file $HOME/.tmux/history.log
+
 
 source-file $HOME/.tmux/bindings.conf
 source-file $HOME/.tmux/tpm.conf
