--- a/home/.tmux/bindings.conf
+++ b/home/.tmux/bindings.conf
@@ -7,7 +7,7 @@
 # like a window manager for the terminal, moving it to <C-a> would make it
 # nearly natural to pressing <Alt-Tab>.
 unbind C-b
-set -gw prefix C-a
+set -g prefix C-a
 
 # Pass in the prefix!
 bind-key b send-key C-a
@@ -31,7 +31,7 @@ bind-key g break-pane -F '[🎓  tmux] Graduated into window #{window_index}.'
 # something I use often, but it comes in handy so it's a bit out-of-reach.
 bind ` next-layout
 
-# Quickly split the window either vertically or horizontally. 
+# Quickly split the window either vertically or horizontally.
 bind-key t split-window -h
 bind-key v split-window -v
 
