--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -13,6 +13,7 @@ set -g @tpm_plugins "             \
   tmux-plugins/tmux-prefix-highlight \
   DanielFGray/tmux-fzf-urls \
   jimeh/tmux-themepack \
+  MikeDacre/tmux-zsh-vim-titles \
 "
 
 set -g @shell-mode 'vim'
@@ -20,9 +21,9 @@ set -g @prefix_highlight_show_copy_mode 'on'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
-set -g @themepack 'block/blue'
+set -g @themepack 'double/cyan'
 set -ag @resurrect-processes ' "~ssh" "~vagrant" "~docker-compose" "~docker"'
-set -ag @resurrect-processes ' "~mk" "~make" "~mosh" "~weechat"'
+set -ag @resurrect-processes ' "~mk" "~make" "~mosh" "~weechat" "~bin/"'
 set -ag @resurrect-processes ' "~glances" "~tail" "~most" "~npx" "~npm" "~bundle"'
 set -ag @resurrect-processes ' "nvim->nvim +SLoad default"'
 
