--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -9,16 +9,16 @@
 # }}}
 
 # {{{1 General options
-set -g mouse off
+set -g mouse on
 
 # Be quantum, change depending on who's looking.
 set -g aggressive-resize on
 
 # Drop response time.
-set -g escape-time 1
+set -g escape-time 2
 
 # Update history size.
-set -g history-limit 16384
+set -g history-limit 100
 # }}}
 
 # Make counting of panes start from 1; and recount them.
@@ -29,14 +29,15 @@ set -g renumber-windows on
 # Allow preservation of screen output.
 set -g alternate-screen on
 
-# Don't constantly rename screens.
-set -g automatic-rename off
+# Rename screens.
+set -g automatic-rename on
 
 # Switch to next session.
-set -g detach-on-destroy off
+set -g detach-on-destroy on
 
 #  Give us the 256 of screen.
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",screen-256color:Tc"
 
 # Defines the string that'd be used for the parent terminal.
 set -g set-titles-string "tmux(#P/#I) #S - #W (#T)"
@@ -53,8 +54,7 @@ set -g mode-keys vi
 # Keep a history file.
 set -g history-file $HOME/.tmux/history.log
 
-
+source-file $HOME/.tmux.local.conf
 source-file $HOME/.tmux/bindings.conf
 source-file $HOME/.tmux/tpm.conf
-source-file $HOME/.tmux.local.conf
 ## }}}
