fix up true color

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -37,7 +37,7 @@ set -g detach-on-destroy on
 
 #  Give us the 256 of screen.
 set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",screen-256color:Tc"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Defines the string that'd be used for the parent terminal.
 set -g set-titles-string "tmux(#P/#I) #S - #W (#T)"
