--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -21,7 +21,7 @@ set -g @prefix_highlight_show_copy_mode 'on'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
-set -g @themepack 'block/cyan'
+set -g @themepack 'block/blue'
 set -ag @resurrect-processes ' "~ssh" "~vagrant" "~docker-compose" "~docker"'
 set -ag @resurrect-processes ' "~mk" "~make" "~mosh" "~weechat" "~bin/"'
 set -ag @resurrect-processes ' "~glances" "~tail" "~most" "~npx" "~npm" "~yarn" "~bundle"'
