--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -1,6 +1,7 @@
 # vim: set ft=tmux :
 # List of plugins
 set -g @tpm_plugins "             \
+  tmux-plugins/tpm                \
   tmux-plugins/tmux-logging       \
   tmux-plugins/tmux-copycat       \
   tmux-plugins/tmux-open          \
@@ -13,7 +14,6 @@ set -g @tpm_plugins "             \
   tmux-plugins/tmux-prefix-highlight \
   DanielFGray/tmux-fzf-urls \
   jimeh/tmux-themepack \
-  MikeDacre/tmux-zsh-vim-titles \
 "
 
 set -g @shell-mode 'vim'
@@ -21,7 +21,7 @@ set -g @prefix_highlight_show_copy_mode 'on'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
-set -g @themepack 'block/blue'
+set -g @themepack 'default/gray'
 set -ag @resurrect-processes ' "~ssh" "~vagrant" "~docker-compose" "~docker"'
 set -ag @resurrect-processes ' "~mk" "~make" "~mosh" "~weechat" "~bin/"'
 set -ag @resurrect-processes ' "~glances" "~tail" "~most" "~npx" "~npm" "~yarn" "~bundle"'
