--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -27,4 +27,8 @@ set -ag @resurrect-processes ' "~mk" "~make" "~mosh" "~weechat" "~bin/"'
 set -ag @resurrect-processes ' "~glances" "~tail" "~most" "~npx" "~npm" "~yarn" "~bundle"'
 set -ag @resurrect-processes ' "nvim->nvim +SLoad default"'
 
+
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
 run-shell $HOME/.tmux/plugins/tpm/tpm
