--- a/home/.tmux/tpm.conf
+++ b/home/.tmux/tpm.conf
@@ -21,12 +21,11 @@ set -g @prefix_highlight_show_copy_mode 'on'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
-set -g @themepack 'default/gray'
+set -g @themepack 'block/gray'
 set -ag @resurrect-processes ' "~ssh" "~vagrant" "~docker-compose" "~docker"'
 set -ag @resurrect-processes ' "~mk" "~make" "~mosh" "~weechat" "~bin/"'
 set -ag @resurrect-processes ' "~glances" "~tail" "~most" "~npx" "~npm" "~yarn" "~bundle"'
 set -ag @resurrect-processes ' "nvim->nvim +SLoad default"'
-
 
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
